--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
   <body>
     <h1>World Clock</h1>
     <footer>
-      This project was coded by Kealeboga Nelly Serapane and is
-      <a href="#" target="_blank">open sourced on Github </a>
+      This project was coded with ❤️ by Kealeboga Nelly Serapane and is
+      <a href="https://app.netlify.com/teams/kea-nelly/sites" target="_blank"
+        >open sourced on Github
+      </a>
     </footer>
     <script src="javascript/index.js"></script>
   </body>
