Added the basic HTML

--- a/index.html
+++ b/index.html
@@ -8,7 +8,32 @@
     <title>World Clock - Kealeboga Nelly Serapane</title>
   </head>
   <body>
-    <h1>World Clock</h1>
+    <div class="container">
+      <h1>World Clock</h1>
+
+      <select>
+        <option value="">Select a city...</option>
+        <option value="">London</option>
+        <option value="">New York</option>
+        <option value="">Auckland</option>
+      </select>
+      <div class="city">
+        <h2>Los Angles</h2>
+        <div class="date">April 15th 2025</div>
+        <div class="time">1:50:07 PM</div>
+      </div>
+      <div class="city">
+        <h2>Sydney</h2>
+        <div class="date">April 7th 2025</div>
+        <div class="time">1:50:20 PM</div>
+      </div>
+
+      <div class="city">
+        <h2>Los Angles</h2>
+        <div class="date">April 15th 2025</div>
+        <div class="time">5:24:30 PM</div>
+      </div>
+    </div>
     <footer>
       This project was coded with ❤️ by Kealeboga Nelly Serapane and is
       <a href="https://app.netlify.com/teams/kea-nelly/sites" target="_blank"
