Added the style project with CSS

--- a/index.html
+++ b/index.html
@@ -17,25 +17,26 @@
         <option value="">New York</option>
         <option value="">Auckland</option>
       </select>
+
       <div class="city">
-        <h2>Los Angles</h2>
-        <div class="date">April 15th 2025</div>
-        <div class="time">1:50:07 PM</div>
-      </div>
-      <div class="city">
-        <h2>Sydney</h2>
-        <div class="date">April 7th 2025</div>
-        <div class="time">1:50:20 PM</div>
+        <div>
+          <h2>Los Angles</h2>
+          <div class="date">April 15th 2025</div>
+        </div>
+        <div class="time">1:50:07 <small>PM</small></div>
       </div>
 
       <div class="city">
-        <h2>Los Angles</h2>
-        <div class="date">April 15th 2025</div>
-        <div class="time">5:24:30 PM</div>
+        <div>
+          <h2>Paris</h2>
+          <div class="date">April 15th 2025</div>
+        </div>
+        <div class="time">1:50:07 <small>PM</small></div>
       </div>
     </div>
     <footer>
-      This project was coded with ❤️ by Kealeboga Nelly Serapane and is
+      This project was coded with ❤️ by
+      <strong>Kealeboga Nelly Serapane</strong> and is
       <a href="https://app.netlify.com/teams/kea-nelly/sites" target="_blank"
         >open sourced on Github
       </a>
