--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.30.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment-timezone/0.5.47/moment-timezone-with-data-1970-2030.min.js"></script>
     <link rel="stylesheet" href="css/style.css" />
     <title>World Clock - Kealeboga Nelly Serapane</title>
   </head>
@@ -18,20 +20,20 @@
         <option value="">Auckland</option>
       </select>
 
-      <div class="city">
+      <div class="city" id="los-angeles">
         <div>
-          <h2>Los Angles</h2>
-          <div class="date">April 15th 2025</div>
+          <h2>Los Angeles</h2>
+          <div class="date"></div>
         </div>
-        <div class="time">1:50:07 <small>PM</small></div>
+        <div class="time"></div>
       </div>
 
-      <div class="city">
+      <div class="city" id="paris">
         <div>
           <h2>Paris</h2>
-          <div class="date">April 15th 2025</div>
+          <div class="date"></div>
         </div>
-        <div class="time">1:50:07 <small>PM</small></div>
+        <div class="time"></div>
       </div>
     </div>
     <footer>
